--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,24 +20,35 @@
           <p>{{ site.description }}</p>
         {% endif %}
         <div>
-        {% for download in site.downloads %}
-            <a href="{{ download.file }}">{{ download.name }}</a> <a href="{{ download.file }}" download><i class="fas fa-download"></i></a> {% unless forloop.last %}| {% endunless %}
-        {% endfor %}
         </div>
         <div>
-          Social Links:
-        <ul class="social-links">
-          <li>
-            <a href="mailto:{{ site.email }}"><i class="fas fa-envelope"></i> Email</a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="fab fa-linkedin"></i> LinkedIn</a>
-          </li>
-          <li>
-            <a href="https://github.com/{{ site.github_username }}"><i class="fab fa-github"></i> GitHub </a>        
-          </li>
-        </ul>
-    </div>
+          <ul>
+            <li><a href="/about-me">About me</a></li>
+            <li><a href="/work-history">Work History</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/skills">Skills</a></li>
+            <li>
+              {% for download in site.downloads %}
+            <a href="{{ download.file }}">{{ download.name }}</a> <a href="{{ download.file }}" download><i class="fas fa-download"></i></a> {% unless forloop.last %}| {% endunless %}
+        {% endfor %}
+            </li>
+            <li>Contact 
+              <ul class="social-links">
+                <li>
+                  <a href="mailto:{{ site.email }}"><i class="fas fa-envelope"></i> Email</a>
+                </li>
+                <li>
+                  <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                </li>
+                <li>
+                  <a href="https://github.com/{{ site.github_username }}"><i class="fab fa-github"></i> GitHub </a>        
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      
+    
       </header>
       
       <section>
