--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,17 +22,22 @@
         <div>
         </div>
         <div>
-          <ul>
-            <li><a href="/about-me">About me</a></li>
-            <li><a href="/work-history">Work History</a></li>
-            <li><a href="/projects">Projects</a></li>
-            <li><a href="/skills">Skills</a></li>
-            <li>
+            <a href="/about-me">About me</a>
+            <hr/>
+            <a href="/work-history">Work History</a>
+            <hr/>
+
+            <div><a href="/projects">Projects</a></div>
+            <hr/>
+            <div><a href="/skills">Skills</a></div>
+            <hr/>
+            <div>
               {% for download in site.downloads %}
             <a href="{{ download.file }}">{{ download.name }}</a> <a href="{{ download.file }}" download><i class="fas fa-download"></i></a> {% unless forloop.last %}| {% endunless %}
         {% endfor %}
-            </li>
-            <li>Contact 
+            </div>
+            <hr/>
+            <div>Contact 
               <ul class="social-links">
                 <li>
                   <a href="mailto:{{ site.email }}"><i class="fas fa-envelope"></i> Email</a>
@@ -44,8 +49,7 @@
                   <a href="https://github.com/{{ site.github_username }}"><i class="fab fa-github"></i> GitHub </a>        
                 </li>
               </ul>
-            </li>
-          </ul>
+            </div>
         </div>
       
     
